--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-maps": "0.30.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.10.1"
   },
   "devDependencies": {
