--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": ">=44.0.0-0 <45.0.0",
+    "expo-contacts": "^10.1.0",
     "expo-location": "^14.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
