--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "prettier": "^2.6.1",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
