Install onchange + concurrently / Add Run Scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "dev": "concurrently --kill-others \"npm run start\" \"npm run prettier-watch\"",
+    "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -14,9 +16,11 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "concurrently": "^7.0.0",
     "expo": ">=44.0.0-0 <45.0.0",
     "expo-contacts": "^10.1.0",
     "expo-location": "^14.0.1",
+    "onchange": "^7.1.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
