--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
   "bracketSpacing": true,
   "bracketSameLine": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "tabWidth": 4
+  "trailingComma": "es5",
+  "tabWidth": 2
 }
