--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "dev": "concurrently --kill-others \"npm run start\" \"npm run prettier-watch\"",
+    "dev": "concurrently \"npm run ios\" \"npm run prettier-watch\"",
     "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
     "test": "jest",
     "lint": "eslint ."
