--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": ">=44.0.0-0 <45.0.0",
     "expo-contacts": "^10.1.0",
     "expo-location": "^14.0.1",
+    "expo-task-manager": "^10.1.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
