--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "haversine-distance": "^1.2.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "onchange": "^7.1.0",
