--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,10 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+        maven {
+            // @notifee/react-native dependency
+            url "$rootDir/../node_modules/@notifee/react-native/android/libs"
+        }
 
         google()
         maven { url 'https://www.jitpack.io' }
