--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@notifee/react-native": "^5.0.3",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
