--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^3.10.1"
+    "react-native-screens": "^3.10.1",
+    "expo-sms": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
