--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "expo": ">=44.0.0-0 <45.0.0",
     "expo-contacts": "^10.1.0",
     "expo-location": "^14.0.1",
+    "expo-sms": "~10.1.0",
     "expo-task-manager": "^10.1.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
-    "react-native-maps": "0.30.1",
+    "react-native-maps": "^0.31.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^3.10.1",
-    "expo-sms": "~10.1.0"
+    "react-native-screens": "^3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
